--- a/app/assets/stylesheets/board_comment.scss
+++ b/app/assets/stylesheets/board_comment.scss
@@ -35,16 +35,11 @@
 }
 
 
-
-.answer-header {
-  margin-top: 20px; /*cssが効いてない*/
-}
-
-.comment-form {
-  padding-bottom: 5px;
-  border-radius: 30px;/*cssが効いてない*/
-}
-
 li {
   list-style: none;
+}
+
+
+.comment-header {
+  margin-top:60px;
 }
