[add]user-graph

--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -53,41 +53,15 @@
           			<p>達成したTo doリストのラベル比率</p>
 					<p>1日ごとのタスク達成数/ 率</p>
 				</div>
-		        <%#= column_chart @user.get_labels, stacked: true %>
-		        <%#= line_chart @user.get_labels, discrete: true %>
-        		<!--discrete: true: 入力していない日付を除く-->
-	       </div>
+				<%= line_chart @user.oneday_list_sum %>
+			</div>
 	     </div>
 	</div>
 </div>
 
+<%= @user.oneday_list_sum %>
 
 
-<!----------------------テスト------------------------------------->
-テスト１ グラフの横軸に日付を表示したい
-<p><%= line_chart @oneday_lists.group_by(&:update_date).map{ |key, value| [key, value.count] }.to_h %></p>
-
-
-
-
-
-<p><% @oneday_lists.each do |oneday_list| %>
-	  <%= l oneday_list.update_date %>
-
-	<% end %>
-</p>
-
-<p><%= @user.today_list_sum %></p>
-
-<p><%= @from %></p>
-<p><%= @to %></p>
-
-
- update_dateカラム
-
-    @from = Time.now.in_time_zone(“Tokyo”).beginning_of_day
-    @to = Time.now.in_time_zone(“Tokyo”).end_of_day
-    @oneday_lists = Todolist.only_done.where(update_date: @from..@to)
 <%#= column_chart [
        {name: "Accepted", data: @number_charges_accepted },
        {name: "Declined", data: @number_charges_declined }
@@ -102,7 +76,6 @@
        discrete: true
 %>
 
-  <%#= @user.today_list_count.group("date(created_at)").count %></p>
 <p><%= @user.today_list_sum %></p>
 <!-- { 20200706 => 3, 20200707 => 20, .....}-->
 
@@ -111,7 +84,3 @@
 <p>
  <%#= line_chart @data.group(:created_at).count, library: { hAxis: { format: 'MM/dd' } } %>
 </p>
-
-<!----------------------テスト------------------------------------->
-
-
