[add]taikai-function

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -79,6 +79,7 @@ footer {
 	padding: 20px 4% 10px;/*footer内側の余白*/
 	position: relative;
 	bottom: 0;
+	margin-top: 50px;
 	display: flex;/*header直下の子要素のレイアウト*/
 	align-items: center;/*縦方向の中心*/
 	background-color: #3E3E3E3E;
