--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,47 +1,53 @@
 <div class="row">
   <div class="col-md-8 offset-1">
-      <h3>
-        会員編集
-        <i class="fas fa-user-cog"></i>
-      </h3>
+    <h3>
+      会員情報編集
+      <i class="fas fa-user-cog"></i>
+    </h3>
+    <div class="text-right">
+      <%= link_to "マイページの確認", public_user_path(@user), class: "btn btn-outline-dark" %>
+    </div>
     <div class="form-set">
 
       <div class="form-horizontal">
-        <%= form_with model: [:public, @user], local: true do |f| %>
+      <%= form_with model: [:public, @user], local: true do |f| %>
         <%#= form_with(model: @user, url: public_user_path, local: true) do |f| %>
-          <%= render 'shared/error_messages', obj: @user %>
+        <%= render 'shared/error_messages', obj: @user %>
 
-          <div class="form-group">
-            <%= attachment_image_tag(@user, :profile_image, :fill, 200, 200,fallback: 'no_image.jpg', size: '50x50') %><hr />
-            <%= f.attachment_field :profile_image %><hr />
+        <div class="form-group">
+          <%= attachment_image_tag(@user, :profile_image, :fill, 200, 200,fallback: 'no_image.jpg', size: '50x50') %><hr />
+          <%= f.attachment_field :profile_image %><hr />
 
+        </div>
+
+        <div class="form-group">
+          <%= f.label :"ユーザー名" %>
+          <%= f.text_field :name, class: 'form-control' %><hr />
+        </div>
+
+        <div class="form-group">
+          <%= f.label :メールアドレス %>
+          <%= f.email_field :email, class: 'form-control' %><hr />
+        </div>
+
+        <div class="form-group">
+          <%= f.label :自己紹介 %>
+          <%= f.text_area :introduction, class: 'form-control' %><hr />
+        </div>
+
+        <div class="form-group">
+          パスワード変更設定<hr />
+        </div>
+
+        <div class="actions">
+          <%= f.submit "変更を保存する", class: "btn btn-outline-primary" %>
+          <%= link_to "戻る", public_user_path(@user), class: "btn btn-outline-dark" %>
+          <div class="user-button">
+            <%= link_to "退会", public_users_hide_path(@user), method: :put, data: { confirm: '本当に退会しますか？'}, class: 'btn btn-outline-danger' %>
           </div>
+        </div>
 
-          <div class="form-group">
-            <%= f.label :"ユーザー名" %>
-            <%= f.text_field :name, class: 'form-control' %><hr />
-          </div>
-
-          <div class="form-group">
-        	   <%= f.label :メールアドレス %>
-        	   <%= f.email_field :email, class: 'form-control' %><hr />
-          </div>
-
-          <div class="form-group">
-            <%= f.label :自己紹介 %>
-            <%= f.text_area :introduction, class: 'form-control' %><hr />
-          </div>
-
-          <div class="form-group">
-            パスワード変更設定<hr />
-          </div>
-
-          <div class="actions">
-             <%= f.submit "変更を保存する", class: "btn btn-outline-primary" %>
-              <%= link_to "戻る", public_user_path(@user), class: "btn btn-outline-dark" %>
-          </div>
-
-        <% end %>
+      <% end %>
       </div>
     </div>
   </div>
