--- a/app/views/public/boards/_index.html.erb
+++ b/app/views/public/boards/_index.html.erb
@@ -3,18 +3,29 @@
 		<thead>
 			<tr>
 				<th>タイトル</th>
-	<!-- 			<th>ユーザー</th> -->
+				<th>カテゴリ</th>
 				<th>投稿日時</th>
+				<th>詳細</th>
 			</tr>
 		</thead>
 		<tbody>
-		<% boards.each do |board| %>
+			<% boards.each do |board| %>
 		<tr>
-			<td><%= link_to board.title, public_board_path(board) %></td>
-	<!-- 		<td><%#= board.user.name %></td> -->
+			<td>
+			  <%= link_to board.title, public_board_path(board) %>
+			</td>
+			<td>
+			<% board.board_tags.each do |board_tag| %>
+				<span class="badge badge-secondary">
+					<%= board_tag.tag.name %>
+				</span>
+			<% end %>
+			</td>
 			<td><%= l board.created_at %></td>
+			<td><%= link_to '詳細', public_board_path(board), class: 'btn btn-outline-info' %></td>
 		</tr>
 		<% end %>
 		</tbody>
 	</table>
 </div>
+
