--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <script src="https://kit.fontawesome.com/8fbcbbf547.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/earlyaccess/kokoro.css" rel="stylesheet">
   </head>
 
   <body>
@@ -15,6 +16,9 @@
     <!--ヘッダーをadminかユーザーログインかで切替表示-->
 
     <header class="header">
+<!--  <img src="/assets/image02.jpg" class="hoge" size="50x50"> -->
+      <%#= image_tag 'image01.jpg', :width => '50', :height => '50', :alt => 'logo' %>
+      <%#= image_tag 'logo.png', :width => '200', :height => '140', :alt => 'logo' %>
       <% if admin_signed_in? %>
         <%= render 'shared/admin_header' %>
       <% else %>
