--- a/app/views/public/todolists/index.html.erb
+++ b/app/views/public/todolists/index.html.erb
@@ -1,11 +1,18 @@
 <div class="row">
-	<section class="py-2">
+<!-- <section class="py-2"> -->
+	<div class="mx-auto">
 		<h2 class="mb-3 text-center">To doリスト設定ページ</h2>
 		<div class="introduction">
 			<p class="text-center">リストの内容をクリアしたら、達成ボタンを押して、進捗をグラフで確認してみましょう。</p>
 		</div>
-	</section>
+		<div class="todo-image pl-5 ml-5">
+		<%#= image_tag 'image01.jpg', :width => '500', :height => '300', :alt => 'top-image' %>
+			<%= image_tag 'image01.jpg', :width => '400', :height => '300', :alt => 'top-image' %>
+		</div>
+	</div>
 </div>
+
+
 
 <div class="row">
 	<!--todolistフォーム-->
