--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,18 +1,5 @@
-<div class="row">
+	さっそく始めよう
 
-
-
-		<!--bootstrap4　ブロックの中央寄せ-->
-		<!--リンク先追加-->
-		<!--使いたくなるようなUI,スライド説明-->
-		<div class="mx-auto">
-
-			<%= image_tag 'logo.png', :width => '700', :height => '700', :alt => 'logo' %>
-
-		</div>
-
-
-
-
-
-</div>
+	<%#= image_tag 'image02.jpg', :width => '1000', :height => '800', :alt => 'top-image' %>
+	<%#= image_tag 'image03.jpg', :width => '500', :height => '500', :alt => 'logo' %>
+	<%= image_tag 'logo.png', :width => '1000', :height => '1000', :alt => 'logo' %>
