--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -52,13 +52,15 @@
 				<div class="card-text">
 					<p>1日ごとのタスク達成数/ 率</p>
 				</div>
-				<%= line_chart @user.oneday_list_sum %>
+				<%#= line_chart @user.oneday_list_sum %>
+				<%= line_chart @user.week_list %>
 			</div>
 	     </div>
 	</div>
 </div>
-テスト
-<%= @user.oneday_list_sum %>
+
+
+
 
 
 <%#= column_chart [
@@ -74,12 +76,3 @@
        },
        discrete: true
 %>
-
-<p><%= @user.today_list_sum %></p>
-<!-- { 20200706 => 3, 20200707 => 20, .....}-->
-
-<p><%= @user.get_labels %></p>
-
-<p>
- <%#= line_chart @data.group(:created_at).count, library: { hAxis: { format: 'MM/dd' } } %>
-</p>
