--- a/app/views/public/boards/_index.html.erb
+++ b/app/views/public/boards/_index.html.erb
@@ -4,12 +4,12 @@
 			<tr>
 				<th>タイトル</th>
 				<th>カテゴリ</th>
-				<th>投稿日時</th>
-				<th>詳細</th>
+				<td>投稿日時</td>
+				<td>詳細</td>
 			</tr>
 		</thead>
 		<tbody>
-			<% boards.each do |board| %>
+		<% boards.each do |board| %>
 		<tr>
 			<td>
 			  <%= link_to board.title, public_board_path(board) %>
@@ -22,6 +22,13 @@
 			<% end %>
 			</td>
 			<td><%= l board.created_at %></td>
+			<td>
+			<% if user_signed_in? %>
+  				<% if board.board_liked_by?(current_user) %>
+					いいね<%= board.board_likes.count %>
+				<% end %>
+			<% end %>
+			</td>
 			<td><%= link_to '詳細', public_board_path(board), class: 'btn btn-outline-info' %></td>
 		</tr>
 		<% end %>
