--- a/app/views/public/users/_profile.html.erb
+++ b/app/views/public/users/_profile.html.erb
@@ -1,7 +1,9 @@
 <table class="table table-hover">
 	<thead class="thead">
 		<tr>
-			<th><h4><i class="fas fa-user-graduate"></i>    プロフィール</h4></th>
+			<th>
+				<h4 class="text-center"><i class="fas fa-user-graduate"></i>    プロフィール</h4>
+			</th>
 		</tr>
 	</thead>
 	<tbody>
