[fix]todolist-layout

--- a/app/views/public/todolists/_tab.html.erb
+++ b/app/views/public/todolists/_tab.html.erb
@@ -1,4 +1,4 @@
-<% if @today_todolists.exists? %>
+<% if todolists.exists? %>
 
 <table class="table table-hover table-responsive">
 	<%# if todolists.only_done.nil? %>
