--- a/app/views/public/todolists/index.html.erb
+++ b/app/views/public/todolists/index.html.erb
@@ -1,11 +1,12 @@
 <div class="row">
 	<div class="mx-auto mb-2">
-		<h2 class="mb-3 text-center">To doリスト設定ページ</h2>
+		<h2 class="mb-3 text-center">To doリスト</h2>
 		<div class="introduction">
 			<p class="text-center">リストの内容をクリアしたら、達成ボタンを押して、進捗をグラフで確認してみましょう。</p>
 		</div>
-		<div class="todo-image pl-5 ml-5">
-			<%= image_tag 'image01.jpg', :width => '400', :height => '300', :alt => 'top-image' %>
+		<div class="todo-image pl-5 ml-5 mb-3">
+			<%= image_tag 'image05.jpg', :width => '500', :height => '250', :alt => 'top-image' %>
+			<%#= image_tag 'image01.jpg', :width => '400', :height => '300', :alt => 'top-image' %>
 		</div>
 	</div>
 </div>
