--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,4 +1,18 @@
 <div class="row">
+	<div class="mx-auto mb-2">
+		<h2 class="mb-3 text-center">ユーザーページ</h2>
+		<div class="introduction">
+			<p class="text-center">日々の進捗をグラフでチェックしましょう。</p>
+		</div>
+		<div class="todo-image pl-5">
+			<%#= image_tag 'image05.jpg', :width => '300', :height => '250', :alt => 'top-image' %>
+			<%= image_tag 'image01.jpg', :width => '400', :height => '300', :alt => 'top-image' %>
+		</div>
+	</div>
+</div>
+
+
+<div class="row">
 	<div class="col-md-4">
 		<div class="card card-default mr-5">
 		<!--プロフィール-->
