--- a/app/views/public/boards/index.html.erb
+++ b/app/views/public/boards/index.html.erb
@@ -5,14 +5,15 @@
 			<p class="text-center">学習の悩みなど気軽に投稿してみましょう。</p>
 		</div>
 		<div class="todo-image pl-2">
-			<%= image_tag 'image04.jpg', :width => '400', :height => '300', :alt => 'top-image' %>
+			<%= image_tag 'image04.jpg', :width => '350', :height => '300', :alt => 'top-image' %>
+			<%#= image_tag 'image04.jpg', :width => '300', :height => '250', :alt => 'top-image' %>
 		</div>
 	</div>
 </div>
 
 <div class="row">
 	<div class="col-md-3">
-		<div class="card card-default mt-5">
+		<div class="card card-default mt-5 mr-4">
 			<div class="card-heading thead">
 				<h5 class="text-center p-2">掲示板内検索</h5>
 			</div>
