[add]layout-login/signin

--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,5 +1,5 @@
 	さっそく始めよう
 
-	<%#= image_tag 'image02.jpg', :width => '1000', :height => '800', :alt => 'top-image' %>
+	<%= image_tag 'image00.jpg', :width => '1000', :height => '800', :alt => 'top-image' %>
 	<%#= image_tag 'image03.jpg', :width => '500', :height => '500', :alt => 'logo' %>
-	<%= image_tag 'logo.png', :width => '1000', :height => '1000', :alt => 'logo' %>
+	<%#= image_tag 'logo.png', :width => '1000', :height => '1000', :alt => 'logo' %>
