--- a/app/views/public/boards/index.html.erb
+++ b/app/views/public/boards/index.html.erb
@@ -13,42 +13,9 @@
 
 <div class="row">
 	<div class="col-md-3">
-		<div class="card card-default mt-5 mr-4">
-			<div class="card-heading thead">
-				<h5 class="text-center p-2">掲示板内検索</h5>
-			</div>
-			<table class="table">
-			   <!--タイトルと本文の検索-->
-			   <!--orでつなげることで複数のカラムが検索できる-->
-			   <%= search_form_for(@search, url: public_boards_path, html: {class: 'form-inline'}) do |f| %>
-			   	<%#= f.label :title_or_body_cont, '検索はこちら' %>
-			   <p><%= f.search_field :title_or_body_cont, class: 'searchform', placeholder: '検索はこちら' %>
-			   </p>
-					<i class="fas fa-search"><%= f.submit %></i>
-				<% end %>
-				<tbody>
-				<tr>
-					<td><%= link_to public_boards_path do %>
-						<span>全記事(<%= Board.all.count %>)</span>
-						<% end %>
-					</td>
-				</tr>
-				<% @tags.each do |tag| %>
-					<% if tag.is_void == false %>
-					<tr>
-						<td class="tag-name">
-						<%= link_to public_boards_path(tag_id: tag.id) do  %>
-							<span><%= tag.name %>(<%= tag.board_tags.count %>)</span>
-						<% end %>
-						</td>
-					</tr>
-					<% end %>
-				<% end %>
-				</tbody>
-			</table>
-		</div>
+		<!--掲示板サイドバー-->
+		<%= render 'public/boards/sidebar', search: @search, tags: @tags %>
 	</div>
-
 
 	<div class="col-md-9">
 		<div class="board-title">
