--- a/app/views/public/todolists/_form.html.erb
+++ b/app/views/public/todolists/_form.html.erb
@@ -6,16 +6,12 @@
 			<%= f.text_field :content, class: 'form-control' %>
 		</div>
 		<div class="form-group">
-
 			<!--属性追加-->
 			<%= f.fields_for :label_lists do |list| %>
 				<%= list.label :ラベル, class: 'label_id' %>
 				<%#= list.label :label_id %>
-				<%= list.collection_select :label_id, Label.all, :id, :name, :include_blank => true %>
+				<%= list.collection_select :label_id, Label.all, :id, :name, {}, class: 'form-control-sm' %>
 			<% end %>
-
-			<%#= f.collection_select :label_id, Label.where(is_void: false), :id, :name, :include_blank => true %>
-
 		</div>
 		<!--編集ページの時のみ表示する-->
 		<% if controller.action_name == 'edit' %>
@@ -23,8 +19,7 @@
 			<%#= f.radio_button :done, { value: false } %>
 			<%= f.label :ステータス %>
 			<%= f.radio_button :done, :false, {value: "false", style: 'display: inline-block;'} %>未完
-			<%= f.radio_button :done, :true, {value: "true", style: 'display: inline-block'} %>達成
-
+			<%= f.radio_button :done, :true, {value: "true", style: 'display: inline-block'} %>完了
 		</div>
 		<% end %>
 		<div class="form-group">
