--- a/app/views/public/todolists/_index.html.erb
+++ b/app/views/public/todolists/_index.html.erb
@@ -1,13 +1,16 @@
-<table class="table table-hover table-responsive">
-	<tbody>
-		<% todolists.each_with_index do |todolist, i| %>
-		<tr>
-			<td><%= "#{i + 1}: " %></td>
-			<td ><%= link_to todolist.content, edit_public_todolist_path(todolist) %></td>
-		</tr>
-		<p>テスト:達成日時を取得したい <%= l todolist.update_date %></p>
-		<p>テスト:更新日時 <%= l todolist.updated_at %></p>
-		<p>テスト:作成日時 <%= l todolist.created_at %></p>
-		<% end %>
-	</tbody>
-</table>
+<% if todolists.not_done.exists? %>
+	<table class="table table-hover table-responsive">
+		<tbody>
+			<% todolists.not_done.each_with_index do |todolist, i| %>
+			<tr>
+				<td><%= "#{i + 1}: " %></td>
+				<td ><%= link_to todolist.content, edit_public_todolist_path(todolist) %></td>
+			</tr>
+			<% end %>
+		</tbody>
+	</table>
+<% else %>
+	<div class="text-center p-3">
+		<%= link_to '設定はこちらから', public_todolists_path, class: 'btn btn-outline-info' %>
+	</div>
+<% end %>
