--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,7 @@
 @import "tag";
 @import "todolist";
 @import "user";
+@import "top";
 
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
