--- a/app/views/manage/boards/show.html.erb
+++ b/app/views/manage/boards/show.html.erb
@@ -4,8 +4,8 @@
     <h2>掲示板詳細</h2>
   </div>
   <div class="ml-auto">
-    <%= link_to '一覧', public_boards_path, class: 'btn btn-outline-dark' %>
-    <%= link_to '編集', edit_public_board_path(@board), class: 'btn btn-outline-dark' %>
+    <%= link_to '一覧', manage_boards_path, class: 'btn btn-outline-dark' %>
+    <%#= link_to '編集', edit_manage_board_path(@board), class: 'btn btn-outline-dark' %>
   </div>
 </div>
 
