--- a/app/views/manage/users/index.html.erb
+++ b/app/views/manage/users/index.html.erb
@@ -33,7 +33,7 @@
 				<td><%= user.id %></td>
 				<td><%= link_to user.name, manage_user_path(user) %></td>
 				<td><%= user.email %></td>
-				<td><%= l user.created_at %></td>
+				<td class="small"><%= l user.created_at %></td>
 
 				<!--ステータスの変更をできるようにすること-->
 				<td><%if user.is_deleted == false %>
