--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,5 +1,71 @@
-	さっそく始めよう
+<main>
+  <div class="p-top-mv">
+    <div class="p-top-mv__inner">
+    	<%= image_tag 'image00.jpg', :width => '800', :height => '550', :alt => 'top-image' %>
+    </div>
+  </div>
+  <section class="p-top-intro">
+    <div class="p-top-intro__spaces">
+      <div class="p-top-intro__space"></div>
+      <div class="p-top-intro__space"></div>
+    </div>
+    <div class="p-top-intro__content">
+      <div class="p-top-intro__child-content">
+        <h2 class="p-top-sec__ttl">
+          <span class="p-top-sec__ttl--secondary"></span>
+          <span class="p-top-sec__ttl--primary">1. To doリストを使って目標を立てる</span>
+        </h2>
+        <div>
+          <p class="p-top-text">学習の目標は明確に。</p>
+          <p class="p-top-text">無理なく実際に実行できる学習計画を立てていきましょう。</p>
+        </div>
 
-	<%= image_tag 'image00.jpg', :width => '1000', :height => '800', :alt => 'top-image' %>
-	<%#= image_tag 'image03.jpg', :width => '500', :height => '500', :alt => 'logo' %>
-	<%#= image_tag 'logo.png', :width => '1000', :height => '1000', :alt => 'logo' %>
+      <div class="p-top-intro__child-img">
+      	<%= image_tag 'image05.jpg', :width => '200', :height => '150', :alt => 'top-image' %>
+
+      </div>
+    </div>
+  </section>
+  <section class="p-top-advisor">
+    <div class="p-top-advisor__content">
+      <div class="p-top-advisor__child-content">
+        <h2 class="p-top-sec__ttl">
+          <span class="p-top-sec__ttl--secondary">2. グラフで日々の進捗を確認する</span>
+        </h2>
+        <div>
+          <p class="p-top-text">学習の軌跡を振り返ってみましょう。</p>
+          <p class="p-top-text"></p>
+        </div>
+        <div class="p-top-sec__linkArea">
+			<%= image_tag 'image03.jpg', :width => '200', :height => '150', :alt => 'top-image' %>
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="p-top-advisor__content">
+      <div class="p-top-advisor__child-content">
+        <h2 class="p-top-sec__ttl">
+          <span class="p-top-sec__ttl--secondary">3. 掲示板を使って、悩みを相談してみましょう。</span>
+        </h2>
+        <div>
+          <p class="p-top-text">同じ目線だからこそわかることがあります。</p>
+          <p class="p-top-text"></p>
+        </div>
+      <div class="p-top-advisor__child-img">
+        <%= image_tag 'image04.jpg', :width => '200', :height => '150', :alt => 'top-image' %>
+      </div>
+    </div>
+  </section>
+
+  <div class="p-footerBtns">
+  <div class="p-footerBtn _contact">
+    <h3 class="p-footerBtn__ttl">
+      <span class="p-footerBtn__ttl--sub">CONTACT US</span>
+    </h3>
+    <div class="p-footerBtn__btnArea">
+      <div class="c-btn _full">
+          <span class="c-btn__txt">お問い合わせ</span>
+      </div>
+    </div>
+
+</main>
