--- a/app/views/manage/labels/index.html.erb
+++ b/app/views/manage/labels/index.html.erb
@@ -1,8 +1,15 @@
 <div class="row">
-	<div class="col-md-2">
-
+	<div class="mx-auto">
+		<h2 class="text mr-5">ラベル一覧</h2>
 	</div>
-	<div class="col-md-10 offset-md-2">
+</div>
+
+<div class="row">
+	<div class="col-md-3">
+		<!--サイドバー-->
+		<%= render 'manage/labels/sidebar', labels: @labels %>
+	</div>
+	<div class="col-md-9 mt-4">
 		<div class="text-right">
 
 			<div class="tag-form">
@@ -37,7 +44,7 @@
 						<% end %>
 					</td>
 					<td>
-						<%= link_to edit_manage_tag_path(label), class: 'btn btn-outline-success' do %>
+						<%= link_to edit_manage_label_path(label), class: 'btn btn-outline-success' do %>
 						  変更<i class="fas fa-cogs"><%= render 'form', label: @label, obj: @label %></i>
 						<% end %>
 					</td>
