--- a/app/views/manage/tags/index.html.erb
+++ b/app/views/manage/tags/index.html.erb
@@ -1,16 +1,8 @@
 <div class="row">
-	<div class="col-md-2">
-<!-- 		<%#= form_tag manage_tags_path, method: :get, html: {class: 'tags_searchForm'} do %>
-			<--= collection_select オブジェクト名, プロパティ名, オブジェクトの配列, value属性にセットしたいオブジェクトの属性, 表示に使用するオブジェクトの属性-->
-			<%#= select_tag :tag_id,options_from_collection_for_select(Tag.select(:is_void), :id, :is_void, params[:is_void]),
-			                     {
-			                       prompt: 'タグで絞り込み',
-			                       class: 'form-control boards__select',
-			                       onchange: 'submit(this.form);'
-			                     } %>
-		<%# end %>
+	<div class="mx-auto">
+		<h2 class="text mr-5">タグ一覧</h2>
 	</div>
-	<div class="col-md-10 offset-md-2">
+	<div class="col-md-12">
 		<div class="text-right">
 
 			<div class="tag-form">
