[add]contact-form

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,7 +5,7 @@
   <div class="footer-list">
 	  <ul class="text-right">
 	    <li>運営情報</li>
-	    <li>お問い合わせ</li>
+	    <li><%= link_to 'お問い合わせ', new_contact_path %></li>
 	  </ul>
   </div>
 </footer>
