--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,35 +1,37 @@
-<h1>お問い合わせフォーム</h1>
+<div class="row">
+	<div class="col-md-8 offset-md-2">
+		<div class="card card-default">
+			<div class="card-head">
+			<h3 class="text-center thead p-3">お問い合わせフォーム</h3>
+			</div>
 
-<%= form_with(model: @contact, local: true) do |f| %>
-<%= render 'shared/error_messages', obj: @contact %>
-<!--   <%# if @contact.errors.any? %>
-    <div id="error_explanation">
-      <h2><%#= pluralize(@contact.errors.count, "error") %> prohibited this contact from being saved:</h2>
+			<div class="card-body">
+				<div class="form-horizontal">
 
-      <ul>
-      <%# contact.errors.full_messages.each do |message| %>
-        <li><%#= message %></li>
-      <%# end %>
-      </ul>
-    </div>
-  <%# end %> -->
+					<%= form_with(model: @contact, local: true) do |f| %>
+					  <%= render 'shared/error_messages', obj: @contact %>
 
-  <div class="field">
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-  </div>
+					  <div class="form-group">
+					    <%= f.label :name %>
+					    <%= f.text_field :name, class: 'form-control' %>
+					  </div>
 
-  <div class="field">
-    <%= f.label :email %>
-    <%= f.text_field :email %>
-  </div>
+					  <div class="form-group">
+					    <%= f.label :email %>
+					    <%= f.text_field :email, class: 'form-control' %>
+					  </div>
 
-  <div class="field">
-    <%= f.label :content %>
-    <%= f.text_area :content %>
-  </div>
+					  <div class="form-group">
+					    <%= f.label :content %>
+					    <%= f.text_area :content, class: 'form-control', rows: 10, placeholder: '問い合わせ内容をご入力ください。' %>
+					  </div>
 
-  <div class="actions">
-    <%= f.submit '送信する' %>
-  </div>
-<% end %>
+					  <div class="actions">
+					    <%= f.submit '送信する', class: 'form-control', class: 'btn btn-outline-info btn-block' %>
+					  </div>
+					<% end %>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
